<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/save_as_file_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_as_file_name_text" />

    <EditText
        android:id="@+id/save_as_file_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/save_as_format_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_as_format_text" />

    <RadioGroup
        android:id="@+id/save_as_format_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/save_as_jpeg_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingRight="10dp"
            android:text="@string/save_as_jpeg_radio_text" />

        <RadioButton
            android:id="@+id/save_as_png_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/save_as_png_radio_text" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/save_as_quality_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/save_as_quality_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_as_quality_text" />

            <TextView
                android:id="@+id/save_as_quality_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_as_quality_default" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/save_as_quality_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="95" />

    </LinearLayout>

</LinearLayout>